--- a/app/src/main/res/layout/content_front.xml
+++ b/app/src/main/res/layout/content_front.xml
@@ -5,6 +5,7 @@
     android:id="@+id/content_front"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#d3d3d3"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -18,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:background="#ffffff"
 
 
         />
@@ -34,6 +36,7 @@
         />
 
     <ListView
+        android:background="#ffffff"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_below="@+id/card"
