--- a/app/src/main/res/layout/content_front.xml
+++ b/app/src/main/res/layout/content_front.xml
@@ -33,7 +33,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/search"
         android:background="@color/cardview_dark_background"
-        />
+        app:cardElevation="12dp" />
 
     <ListView
         android:background="#ffffff"
