--- a/app/src/main/res/menu/activity_front_drawer.xml
+++ b/app/src/main/res/menu/activity_front_drawer.xml
@@ -1,29 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/signin"
+            android:id="@+id/actionBarSignIn"
 
-            android:title="Sign In" />
+            android:title="Sign In"
+            tools:ignore="HardcodedText"
+            android:onClick="@string/title_activity_login" />
         <item
-            android:id="@+id/intrested"
+            android:id="@+id/Intrested"
 
+            tools:ignore="HardcodedText"
             android:title="Intrested" />
         <item
             android:id="@+id/register"
 
-            android:title="Register" />
+            android:title="Register"
+            tools:ignore="HardcodedText" />
         <item
             android:id="@+id/calender"
 
-            android:title="Calender" />
+            android:title="Calender"
+            tools:ignore="HardcodedText" />
         <item
             android:id="@+id/admin"
-            android:title="Register as Admin"/>
+            android:title="Register as Admin"
+            tools:ignore="HardcodedText" />
     </group>
 
-    <item android:title="Manage Fest">
+    <item android:title="Manage Fest"
+        tools:ignore="HardcodedText">
         <menu>
             <item
                 android:id="@+id/registrations"
@@ -32,7 +40,8 @@
             <item
                 android:id="@+id/createfest"
 
-                android:title="Create Fest" />
+                android:title="Create Fest"
+                tools:ignore="HardcodedText" />
             <item
                 android:id="@+id/modifyfest"
                 android:title="Modify Fest"/>
