fork it . starting ui

--- a/app/src/main/res/menu/activity_front_drawer.xml
+++ b/app/src/main/res/menu/activity_front_drawer.xml
@@ -9,7 +9,7 @@
         <item
             android:id="@+id/intrested"
 
-            android:title="Intrested" />
+            android:title="Interested" />
         <item
             android:id="@+id/register"
 
