--- a/app/src/main/res/layout/content_front.xml
+++ b/app/src/main/res/layout/content_front.xml
@@ -43,7 +43,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:layout_alignParentBottom="true"
-        android:id="@+id/festlist"/>
+        android:id="@+id/festlist"
+        android:clickable="true" />
 
 
 
