--- a/app/src/main/res/layout/activity_fest_calendar.xml
+++ b/app/src/main/res/layout/activity_fest_calendar.xml
@@ -5,31 +5,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="#d3d3d3"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.android.festeve.FestCalendarActivity">
 
-    <TextView
-        android:text="Fest Calendar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="128dp"
-        android:layout_marginStart="128dp"
-        android:paddingTop="26dp"
-        android:paddingBottom="26dp"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        android:id="@+id/textView2"
-        android:layout_alignParentTop="true" />
 
     <CalendarView
+        android:background="#ffffff"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/calendarView"
-        android:layout_below="@+id/textView2"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="180dp" />
+
+    <TextView
+        android:text="  This Month "
+        android:textStyle="bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/datelist"
+        android:layout_marginBottom="2dp"
+        android:background="#ffffff"/>
+
+    <ListView
+        android:id="@+id/datelist"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="#ffffff"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true" />
+
 </RelativeLayout>
