--- a/app/src/main/res/layout/activity_modify_fest_option.xml
+++ b/app/src/main/res/layout/activity_modify_fest_option.xml
@@ -7,16 +7,19 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:background="#d3d3d3"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.android.festeve.ModifyFestOptionActivity">
 
     <TextView
-        android:text="Select Fest To Modify"
-        android:layout_width="wrap_content"
+        android:text="Select Fest"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="26dp"
-        android:textStyle="normal"
+        android:paddingBottom="12dp"
+        android:textStyle="bold"
         android:id="@+id/textView4"
+        android:background="#ffffff"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -24,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="21dp"
+        android:background="#ffffff"
         android:layout_below="@+id/textView4"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
