--- a/app/src/main/res/layout/activity_fest_feeds.xml
+++ b/app/src/main/res/layout/activity_fest_feeds.xml
@@ -12,7 +12,7 @@
     tools:context="com.example.android.festeve.fest_feeds">
 
     <StackView
-        android:layout_width="240dp"
+        android:layout_width="match_parent"
         android:background="#ffffff"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
