--- a/app/src/main/res/layout/activity_modify_fest_option.xml
+++ b/app/src/main/res/layout/activity_modify_fest_option.xml
@@ -11,23 +11,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.android.festeve.ModifyFestOptionActivity">
 
-    <TextView
-        android:text="Select Fest"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:paddingBottom="12dp"
-        android:textStyle="bold"
-        android:id="@+id/textView4"
-        android:background="#ffffff"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="21dp"
         android:background="#ffffff"
-        android:layout_below="@+id/textView4"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
