--- a/app/src/main/res/layout/activity_view_enrollment.xml
+++ b/app/src/main/res/layout/activity_view_enrollment.xml
@@ -11,26 +11,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.android.festeve.ViewEnrollmentActivity">
 
-    <TextView
-        android:text="Participants List"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="51dp"
-        android:layout_marginStart="51dp"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:id="@+id/textView3"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <ListView
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:background="#ffffff"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/textView3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
