--- a/app/src/main/res/layout/content_front.xml
+++ b/app/src/main/res/layout/content_front.xml
@@ -20,6 +20,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:background="#ffffff"
+        android:queryHint="Fest Name or College"
+        android:showAsAction="collapseActionView|ifRoom"
 
 
         />
