firebase successful for create_fest activity

--- a/app/src/main/res/layout/content_front.xml
+++ b/app/src/main/res/layout/content_front.xml
@@ -2,16 +2,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.example.android.festeve.FrontActivity"
+    tools:showIn="@layout/app_bar_front"
     android:id="@+id/content_front"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#d3d3d3"
+    android:background="@drawable/frontfin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.android.festeve.FrontActivity"
-    tools:showIn="@layout/app_bar_front">
+
+
+
+  >
+
 
     <SearchView
         android:id="@+id/search"
