--- a/app/src/main/res/menu/activity_front_drawer.xml
+++ b/app/src/main/res/menu/activity_front_drawer.xml
@@ -53,7 +53,8 @@
             <item
                 android:id="@+id/venroll"
                 android:title="View Enrollments"
-                android:icon="?android:attr/actionModeFindDrawable" />
+                android:icon="@android:drawable/ic_menu_save"
+                />
         </menu>
     </item>
 
