--- a/app/src/main/res/layout/activity_enrollment.xml
+++ b/app/src/main/res/layout/activity_enrollment.xml
@@ -17,11 +17,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:hint=" Name"
         android:paddingBottom="12dp"
         android:ems="10"
-        android:background="#ffffff"
-        android:id="@+id/editText4"
+
+        android:id="@+id/user_name"
         android:layout_marginTop="32dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -29,13 +29,13 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#ffffff"
+
         android:paddingBottom="12dp"
         android:inputType="textEmailAddress"
-        android:text="E-mail"
+        android:hint=" E-mail"
         android:ems="10"
-        android:id="@+id/editText5"
-        android:layout_below="@+id/editText4"
+        android:id="@+id/user_email"
+        android:layout_below="@+id/user_name"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
     [<EditText
@@ -43,51 +43,60 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Contact Number"
+        android:hint=" Contact Number"
         android:ems="10"
-    android:background="#ffffff"
-        android:id="@+id/editText6"
-        android:layout_below="@+id/editText5"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-    <EditText
-        android:paddingBottom="12dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="City"
-        android:ems="10"
-        android:background="#ffffff"
-        android:id="@+id/editText7"
-        android:layout_below="@+id/editText6"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-    <EditText
-        android:paddingBottom="12dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="College/University"
-        android:ems="10"
-        android:id="@+id/editText8"
-        android:background="#ffffff"
-        android:layout_below="@+id/editText7"
+
+        android:id="@+id/user_number"
+        android:layout_below="@+id/user_email"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+
+
+    <EditText
+        android:paddingBottom="12dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:hint=" City"
+        android:ems="10"
+
+        android:id="@+id/user_city"
+        android:layout_below="@+id/user_number"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+
+
+    <EditText
+        android:paddingBottom="12dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:hint=" College/University"
+        android:ems="10"
+        android:id="@+id/user_univ"
+
+        android:layout_below="@+id/user_city"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+
+
+
     <Button
         android:paddingBottom="12dp"
-        android:text="Button"
+        android:text="Enroll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button"
-        android:background="#ffffff"
+        android:id="@+id/enroll"
         android:layout_marginBottom="57dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="120dp"
         android:layout_marginStart="120dp" />
+
 
 
 </RelativeLayout>
