--- a/app/src/main/res/layout/activity_select_fest.xml
+++ b/app/src/main/res/layout/activity_select_fest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_modify_fest_option"
+    android:id="@+id/activity_select_fest"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -9,12 +9,16 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:background="#d3d3d3"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.festeve.ModifyFestOptionActivity">
+    tools:context="com.example.android.festeve.SelectFestActivity">
 
-    <ListView
+
+
+
+   <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#ffffff"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true" />
+        android:id="@+id/selectfest"
+        android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
