firebase successful for create_fest activity

--- a/app/src/main/res/layout/activity_fest_feeds.xml
+++ b/app/src/main/res/layout/activity_fest_feeds.xml
@@ -12,8 +12,21 @@
     tools:context="com.example.android.festeve.fest_feeds">
 
 
-    <StackView
+
+
+
+   <!-- <StackView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true" />  -->
+
+
+   <android.support.v7.widget.RecyclerView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:id="@+id/recyclerview"
+       android:layout_alignParentTop="true"
+       android:layout_alignParentLeft="true"
+       android:layout_alignParentStart="true"
+       android:layout_marginTop="19dp" />
 </RelativeLayout>
